Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -600,6 +600,7 @@
     "flag": "Bandera",
     "folder-not-writable": "No es pot escriure sobre la carpeta d'FacturaScripts.",
     "font": "Font",
+    "font-size": "Mida font",
     "footer": "Peu de pàgina",
     "footer-text": "Text peu de pàgina",
     "for-admins": "Per administradors",
@@ -1451,6 +1452,7 @@
     "time": "Hora",
     "timezone": "Zona horària",
     "title": "Títol",
+    "title-font-size": "Mida font títol",
     "title-url": "Títol (URL)",
     "to": "Per",
     "to-refund": "A retornar",
