--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -600,6 +600,7 @@
     "flag": "Flagge",
     "folder-not-writable": "Sie können nicht über FacturaScripts Ordner schreiben.",
     "font": "Schriftart",
+    "font-size": "font-size",
     "footer": "Pié de página",
     "footer-text": "Fusszeilen Text",
     "for-admins": "Para administradores",
@@ -1451,6 +1452,7 @@
     "time": "Time",
     "timezone": "Wähle Zeitzone aus",
     "title": "Title",
+    "title-font-size": "title-font-size",
     "title-url": "Title URL",
     "to": "To",
     "to-refund": "A devolver",
