--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -600,6 +600,7 @@
     "flag": "Flag",
     "folder-not-writable": "You can not write to the FacturaScripts folder.",
     "font": "Font",
+    "font-size": "Font size",
     "footer": "Footer",
     "footer-text": "Footer text",
     "for-admins": "For administrators",
@@ -1451,6 +1452,7 @@
     "time": "Time",
     "timezone": "Time zone",
     "title": "Title",
+    "title-font-size": "Title font size",
     "title-url": "Title URL",
     "to": "To",
     "to-refund": "To refund",
