--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -600,6 +600,7 @@
     "flag": "Ikurra",
     "folder-not-writable": "FacturaScripts karpetan ezin da idatzi.",
     "font": "Letra-mota",
+    "font-size": "Letra-tipoaren tamaina",
     "footer": "Orri oina",
     "footer-text": "Orri-oinaren testua",
     "for-admins": "Administratzaileentzat",
@@ -1451,6 +1452,7 @@
     "time": "Ordua",
     "timezone": "Ordu-zona",
     "title": "Izenburua",
+    "title-font-size": "Izenburuaren letra-tamaina",
     "title-url": "Titulua (URL)",
     "to": "Nori",
     "to-refund": "Itzultzera",
