--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -18,8 +18,8 @@
     "account-data-missing": "Données manquantes dans le compte",
     "account-dot-code": "compte-dot-code",
     "account-length": "Longueur du compte",
-    "account-length-error": "Longueur de compte incorrecte. Le compte doit avoir la longueur définie dans l'exercice.",
-    "account-missing-in-balance": "Le compte %codcuenta% possède un solde mais n'est pas inclus dans les soldes. Pensez à l'inclure si les soldes sont désiquilibrés..",
+    "account-length-error": "Erreur de longueur de compte. Le compte %code% doit avoir la longueur définie dans l'exercice.",
+    "account-missing-in-balance": "Le compte %codcuenta% possède un solde, mais n'est pas inclus dans les bilans. Pensez à l'inclure si le bilan est déséquilibré.",
     "account-parent-error": "Le compte parent est incorrect ou n'appartient pas à l'exercice",
     "accounting": "Comptabilité",
     "accounting-accounts": "Comptes comptables",
@@ -44,7 +44,7 @@
     "accounting-reports": "Rapports de comptabilité",
     "accounting-within-regularization": "L'entrée comptable est dans une régularisation de %taxe%. Elle ne peut pas être supprimée.",
     "accounts": "Comptes",
-    "accrual-date": "Fecha devengo",
+    "accrual-date": "Date de régularisation",
     "action": "Action",
     "actions": "actions",
     "active": "Actif",
@@ -61,7 +61,7 @@
     "addresses-and-contacts": "Adresses et contacts",
     "admin": "Admin",
     "administrator": "administrateur",
-    "adult": "Adulto",
+    "adult": "Adulte",
     "advanced": "Avancé",
     "agent": "Agent",
     "agent-commission-info": "Cela s'appliquera uniquement à l'agent sélectionné",
@@ -600,6 +600,7 @@
     "flag": "Drapeau",
     "folder-not-writable": "Vous ne pouvez pas écrire sur le dossier FacturaScripts.",
     "font": "Police de caractère",
+    "font-size": "Corps",
     "footer": "Pié de página",
     "footer-text": "Texte du pied",
     "for-admins": "Pour les administrateurs",
@@ -1451,6 +1452,7 @@
     "time": "Heure",
     "timezone": "Sélectionner le fuseau horaire",
     "title": "Titre",
+    "title-font-size": "Corps du titre",
     "title-url": "Titre (URL)",
     "to": "Pour",
     "to-refund": "À rembourser",
