--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -600,6 +600,7 @@
     "flag": "Bandeira",
     "folder-not-writable": "Non pode escribir sobre cartafol FacturaScripts.",
     "font": "Fonte",
+    "font-size": "Tamaño de fonte",
     "footer": "Pe de páxina",
     "footer-text": "Texto pé de páxina",
     "for-admins": "Para administradores",
@@ -1451,6 +1452,7 @@
     "time": "Hora",
     "timezone": "Zona horaria",
     "title": "Título",
+    "title-font-size": "Tamaño fonte título",
     "title-url": "Título (URL)",
     "to": "Para",
     "to-refund": "A devolver",
