--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -600,6 +600,7 @@
     "flag": "Bandiera",
     "folder-not-writable": "Non è possibile scrivere sui FacturaScripts cartella.",
     "font": "Font",
+    "font-size": "font-size",
     "footer": "Pié de página",
     "footer-text": "footer-text",
     "for-admins": "Para administradores",
@@ -1451,6 +1452,7 @@
     "time": "Time",
     "timezone": "Seleziona il fuso orario",
     "title": "Titolo",
+    "title-font-size": "title-font-size",
     "title-url": "Title URL",
     "to": "A",
     "to-refund": "A devolver",
