--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -600,6 +600,7 @@
     "flag": "Bandeira",
     "folder-not-writable": "Você não pode escrever na pasta FacturaScripts.",
     "font": "Fonte",
+    "font-size": "Tamanho de fonte",
     "footer": "Pié de página",
     "footer-text": "Texto do rodapé",
     "for-admins": "Para administradores",
@@ -1451,6 +1452,7 @@
     "time": "Hora",
     "timezone": "Selecione fuso horário",
     "title": "Título",
+    "title-font-size": "Tamanho da fonte do título",
     "title-url": "Título (URL)",
     "to": "Para",
     "to-refund": "A devolver",
