--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -600,6 +600,7 @@
     "flag": "Bandera",
     "folder-not-writable": "No pots escriure en la carpeta de FacturaScripts.",
     "font": "Tipo de lletra",
+    "font-size": "font-size",
     "footer": "Pié de página",
     "footer-text": "Footer text",
     "for-admins": "Para administradores",
@@ -1451,6 +1452,7 @@
     "time": "Hora",
     "timezone": "Selecciona la zona horària",
     "title": "Títul",
+    "title-font-size": "title-font-size",
     "title-url": "Títul (URL)",
     "to": "Per a",
     "to-refund": "A devolver",
