--- a/Core/Translation/es_PE.json
+++ b/Core/Translation/es_PE.json
@@ -600,6 +600,7 @@
     "flag": "Bandera",
     "folder-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts.",
     "font": "Fuente",
+    "font-size": "Tamaño fuente",
     "footer": "Pie de página",
     "footer-text": "Texto pié de página",
     "for-admins": "Para administradores",
@@ -1451,6 +1452,7 @@
     "time": "Hora",
     "timezone": "Zona horaria",
     "title": "Título",
+    "title-font-size": "Tamaño fuente título",
     "title-url": "Título (URL)",
     "to": "Para",
     "to-refund": "A devolver",
