Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -320,6 +320,7 @@
     "credit": "Kredit",
     "crm": "CRM",
     "cron-job": "Programmierte Arbeit",
+    "crons": "Crons",
     "currency": "Währung",
     "currency-position": "Position Währungszeichen",
     "current-risk": "aktuelles Risiko",
@@ -453,6 +454,7 @@
     "documents-generated": "Dokumente erstellt",
     "domiciled": "Lastschrift",
     "done": "erledigt",
+    "done-date": "Fecha finalización",
     "dont-sell-above-pvp": "Verkaufen Sie nicht über den Einzelhandelspreis",
     "dont-sell-below-cost": "Verkaufe nicht unter Kosten",
     "download": "Download",
@@ -539,6 +541,8 @@
     "estimation-email-subject": "estimation-email-subject",
     "estimation-email-text": "Guten Tag, in der Anlage Ihr Kostenvoranschlag % Code%",
     "estimations": "Budget",
+    "event": "Evento",
+    "events": "Eventos",
     "exceptions": "Ausnahmen",
     "excess": "im Übermaß",
     "exclude-invalid": "Excluir inválidos",
@@ -561,6 +565,7 @@
     "export": "exportieren",
     "export-bill": "Exportationsrechnung",
     "extra-file": "Extra Datei",
+    "failed": "Fallido",
     "families": "Familien",
     "family": "Familie",
     "family-code": "Familiencode",
@@ -1570,6 +1575,7 @@
     "wizard": "Asistent",
     "wizard-p": "Füllen Sie dieses Formular zu Ihrem Unternehmen aus, um die Konfiguration abzuschließen.",
     "wizard-plugins": "Ein Plugin ist eine Ergänzung, die neue Funktionalitäten hinzufügt. Wählen Sie die Plugins aus, die Sie sofort aktivieren möchten, oder tun Sie dies später über die Systemsteuerung.",
+    "work-events": "Eventos de trabajo",
     "working-hours": "Horario de trabajo",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Spalte X",
