--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -320,6 +320,7 @@
     "credit": "Credit",
     "crm": "CRM",
     "cron-job": "Scheduled Task",
+    "crons": "Crons",
     "currency": "Currency",
     "currency-position": "Currency position",
     "current-risk": "Current risk",
@@ -453,6 +454,7 @@
     "documents-generated": "Documents generated",
     "domiciled": "Domiciled",
     "done": "Done",
+    "done-date": "Fecha finalización",
     "dont-sell-above-pvp": "Don't sell above retail price",
     "dont-sell-below-cost": "Don't sell below cost",
     "download": "Download",
@@ -539,6 +541,8 @@
     "estimation-email-subject": "Your estimation %code%",
     "estimation-email-text": "Hello, I am attaching your estimation %code%",
     "estimations": "Estimations",
+    "event": "Evento",
+    "events": "Eventos",
     "exceptions": "Exceptions",
     "excess": "Excess",
     "exclude-invalid": "Exclude invalid",
@@ -561,6 +565,7 @@
     "export": "Export",
     "export-bill": "export-bill",
     "extra-file": "Extra file",
+    "failed": "Fallido",
     "families": "Families",
     "family": "Family",
     "family-code": "Family code",
@@ -1570,6 +1575,7 @@
     "wizard": "Wizard",
     "wizard-p": "Fill out this form about your business to finish the configuration.",
     "wizard-plugins": "A plugin adds functionality. Select the plugins you want to activate immediately, or you can do it later from the control panel.",
+    "work-events": "Eventos de trabajo",
     "working-hours": "Work schedule",
     "write-a-message-here": "Write a message here",
     "x-column": "X column",
