--- a/Core/Translation/es_EC.json
+++ b/Core/Translation/es_EC.json
@@ -320,6 +320,7 @@
     "credit": "abonar",
     "crm": "CRM",
     "cron-job": "Tarea programada",
+    "crons": "Crons",
     "currency": "Moneda",
     "currency-position": "Posición símbolo de divisa",
     "current-risk": "Riesgo actual",
@@ -453,6 +454,7 @@
     "documents-generated": "Documentos generados",
     "domiciled": "Domiciliado",
     "done": "Realizado",
+    "done-date": "Fecha finalización",
     "dont-sell-above-pvp": "No vender por encima de PVP",
     "dont-sell-below-cost": "No vender por debajo de coste",
     "download": "Descargar",
@@ -539,6 +541,8 @@
     "estimation-email-subject": "Su presupuesto %code%",
     "estimation-email-text": "Buenos días, le adjunto su presupuesto %code%",
     "estimations": "Presupuestos",
+    "event": "Evento",
+    "events": "Eventos",
     "exceptions": "Excepciones",
     "excess": "En exceso",
     "exclude-invalid": "Excluir inválidos",
@@ -561,6 +565,7 @@
     "export": "Exportar",
     "export-bill": "Factura de exportación",
     "extra-file": "Archivo extra",
+    "failed": "Fallido",
     "families": "Familias",
     "family": "Familia",
     "family-code": "Código de la família",
@@ -1570,6 +1575,7 @@
     "wizard": "Asistente",
     "wizard-p": "Rellene este formulario sobre su negocio para terminar la configuración.",
     "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
+    "work-events": "Eventos de trabajo",
     "working-hours": "Horario de trabajo",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Columna X",
