--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -320,6 +320,7 @@
     "credit": "Hartzekoa",
     "crm": "CRM",
     "cron-job": "Zeregin programatua",
+    "crons": "Crons",
     "currency": "Dibisa",
     "currency-position": "Moneta sinboloaren posizioa",
     "current-risk": "Oraingo arriskua",
@@ -453,6 +454,7 @@
     "documents-generated": "Dokumentuak sortuta",
     "domiciled": "Helbideratua",
     "done": "Eginda",
+    "done-date": "Fecha finalización",
     "dont-sell-above-pvp": "Salmenta prezioaren gainetik ez saldu",
     "dont-sell-below-cost": "Ez saldu kostu prezioaren azpitik",
     "download": "Deskarga",
@@ -539,6 +541,8 @@
     "estimation-email-subject": "Zure %code% aurrekontua",
     "estimation-email-text": "Kaixo, zure %code% aurrekontua atxikitzen dizut",
     "estimations": "Aurrekontuak",
+    "event": "Evento",
+    "events": "Eventos",
     "exceptions": "Salbuespenak",
     "excess": "Soberan",
     "exclude-invalid": "Baliogabeak baztertu",
@@ -561,6 +565,7 @@
     "export": "Exportatu",
     "export-bill": "Esportazio faktura",
     "extra-file": "Fitxategi gehigarria",
+    "failed": "Fallido",
     "families": "Familiak",
     "family": "Familia",
     "family-code": "Familia kodea",
@@ -1570,6 +1575,7 @@
     "wizard": "Laguntzailea",
     "wizard-p": "Bete zure negozioari buruzko inprimaki hau konfigurazioa amaitzeko.",
     "wizard-plugins": "Plugin bat funtzionalitate berriak gehitzen dituen osagarri bat da. Aukeratu berehala aktibatu nahi dituzun pluginak edo egin ezazu beranduago kontrol paneletik.",
+    "work-events": "Eventos de trabajo",
     "working-hours": "Horario de trabajo",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "X zutabea",
