--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -320,6 +320,7 @@
     "credit": "Crédit",
     "crm": "GRC",
     "cron-job": "Tâche programmée",
+    "crons": "Crons",
     "currency": "Devise",
     "currency-position": "Position du symbole de la devise",
     "current-risk": "Risque actuel",
@@ -453,6 +454,7 @@
     "documents-generated": "Documents générés",
     "domiciled": "Domicilié",
     "done": "Effectué",
+    "done-date": "Fecha finalización",
     "dont-sell-above-pvp": "Ne pas vendre au-dessus du prix de détail",
     "dont-sell-below-cost": "Ne pas vendre en dessous du coût",
     "download": "télécharger",
@@ -539,6 +541,8 @@
     "estimation-email-subject": "Votre devis %code%",
     "estimation-email-text": "Bonjour, vous trouverez votre devis %code% en pièce jointe",
     "estimations": "devis",
+    "event": "Evento",
+    "events": "Eventos",
     "exceptions": "Exceptions",
     "excess": "En excès",
     "exclude-invalid": "Excluir inválidos",
@@ -561,6 +565,7 @@
     "export": "Exporter",
     "export-bill": "Facture d'exportation",
     "extra-file": "Fichier supplémentaire",
+    "failed": "Fallido",
     "families": "Des familles",
     "family": "Famille",
     "family-code": "Code familial",
@@ -1570,6 +1575,7 @@
     "wizard": "Assistant",
     "wizard-p": "Remplissez ce formulaire au sujet de votre entreprise pour achever la configuration.",
     "wizard-plugins": "Un module ajoute des fonctionnalités. Sélectionnez les modules que vous souhaitez activer immédiatement. Vous pourrez toujours le faire ultérieurement via le Panneau d'administration.",
+    "work-events": "Événements de travail",
     "working-hours": "Horario de trabajo",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Colonne X",
