--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -320,6 +320,7 @@
     "credit": "Haber",
     "crm": "CRM",
     "cron-job": "Tarefa programada",
+    "crons": "Crons",
     "currency": "Moeda",
     "currency-position": "Posición do símbolo de moeda",
     "current-risk": "Risco actual",
@@ -453,6 +454,7 @@
     "documents-generated": "Documentos xerados",
     "domiciled": "Domiciliado",
     "done": "Feito",
+    "done-date": "Fecha finalización",
     "dont-sell-above-pvp": "Non vender por riba do PVP",
     "dont-sell-below-cost": "Non vender por debaixo do custo",
     "download": "descargar",
@@ -539,6 +541,8 @@
     "estimation-email-subject": "O seu orzamento %code%",
     "estimation-email-text": "Ola, adxunto o seu orzamento %code%",
     "estimations": "Orzamentos",
+    "event": "Evento",
+    "events": "Eventos",
     "exceptions": "Excepcións",
     "excess": "En exceso",
     "exclude-invalid": "Excluir inválidos",
@@ -561,6 +565,7 @@
     "export": "Exportar",
     "export-bill": "Factura de exportación",
     "extra-file": "Arquivo extra",
+    "failed": "Fallido",
     "families": "Familias",
     "family": "Familia",
     "family-code": "Código familiar",
@@ -1570,6 +1575,7 @@
     "wizard": "asistente",
     "wizard-p": "Cubra este formulario sobre o seu negocio para rematar a configuración.",
     "wizard-plugins": "Un plugin é un complemento que engade novas funcionalidades. Selecciona os plugins que queras activar de inmediato, ou faino máis tarde dende o panel de control.",
+    "work-events": "Eventos de trabajo",
     "working-hours": "Horario de trabajo",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Columna X",
