--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -320,6 +320,7 @@
     "credit": "Credit",
     "crm": "CRM",
     "cron-job": "cron-job",
+    "crons": "Crons",
     "currency": "Moneta",
     "currency-position": "Currency position",
     "current-risk": "current-risk",
@@ -453,6 +454,7 @@
     "documents-generated": "documents-generated",
     "domiciled": "Domiciliato",
     "done": "done",
+    "done-date": "Fecha finalización",
     "dont-sell-above-pvp": "Non vendere al di sopra del prezzo al dettaglio",
     "dont-sell-below-cost": "Non vendere sottocosto",
     "download": "Scarica",
@@ -539,6 +541,8 @@
     "estimation-email-subject": "estimation-email-subject",
     "estimation-email-text": "estimation-email-text",
     "estimations": "budget",
+    "event": "Evento",
+    "events": "Eventos",
     "exceptions": "exceptions",
     "excess": "excess",
     "exclude-invalid": "Excluir inválidos",
@@ -561,6 +565,7 @@
     "export": "Esporta",
     "export-bill": "export-bill",
     "extra-file": "File aggiuntivo",
+    "failed": "Fallido",
     "families": "famiglie",
     "family": "Famiglia",
     "family-code": "Codice famiglia",
@@ -1570,6 +1575,7 @@
     "wizard": "wizard",
     "wizard-p": "wizard-p",
     "wizard-plugins": "wizard-plugins",
+    "work-events": "Eventos de trabajo",
     "working-hours": "Horario de trabajo",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "x-column",
