--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -320,6 +320,7 @@
     "credit": "Credit",
     "crm": "CRM",
     "cron-job": "cron-job",
+    "crons": "Crons",
     "currency": "Moeda",
     "currency-position": "Currency position",
     "current-risk": "current-risk",
@@ -453,6 +454,7 @@
     "documents-generated": "documents-generated",
     "domiciled": "Domiciliado",
     "done": "Feito",
+    "done-date": "Fecha finalización",
     "dont-sell-above-pvp": "Não venda acima o preço de varejo",
     "dont-sell-below-cost": "Não venda abaixo o custo",
     "download": "download",
@@ -539,6 +541,8 @@
     "estimation-email-subject": "O seu orçamento %code%",
     "estimation-email-text": "Olá, vai anexo o orçamento %code%",
     "estimations": "Estimativas",
+    "event": "Evento",
+    "events": "Eventos",
     "exceptions": "Exceções",
     "excess": "excess",
     "exclude-invalid": "Excluir inválidos",
@@ -561,6 +565,7 @@
     "export": "export",
     "export-bill": "export-bill",
     "extra-file": "Extra file",
+    "failed": "Fallido",
     "families": "Famílias",
     "family": "Família",
     "family-code": "Código familiar",
@@ -1570,6 +1575,7 @@
     "wizard": "wizard",
     "wizard-p": "wizard-p",
     "wizard-plugins": "wizard-plugins",
+    "work-events": "Eventos de trabajo",
     "working-hours": "Horario de trabajo",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "x-column",
