--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -320,6 +320,7 @@
     "credit": "Haver",
     "crm": "CRM",
     "cron-job": "Tasca programada",
+    "crons": "Crons",
     "currency": "Moneda",
     "currency-position": "Posició símbol de divisa",
     "current-risk": "Risc actual",
@@ -453,6 +454,7 @@
     "documents-generated": "Documents generats",
     "domiciled": "Domiciliat",
     "done": "Realitzat",
+    "done-date": "Fecha finalización",
     "dont-sell-above-pvp": "No vendre per sobre del PVP",
     "dont-sell-below-cost": "No vendre per sota del cost",
     "download": "Descarregar",
@@ -539,6 +541,8 @@
     "estimation-email-subject": "El seu pressupost %code%",
     "estimation-email-text": "Hola, li adjuntem el seu pressupost %code%",
     "estimations": "Pressupostos",
+    "event": "Evento",
+    "events": "Eventos",
     "exceptions": "Excepcions",
     "excess": "En excés",
     "exclude-invalid": "Excloure invàlids",
@@ -561,6 +565,7 @@
     "export": "exportar",
     "export-bill": "Factura d'exportació",
     "extra-file": "Arxiu extra",
+    "failed": "Fallido",
     "families": "Famílies",
     "family": "Família",
     "family-code": "Codi de família",
@@ -1570,6 +1575,7 @@
     "wizard": "Wizard",
     "wizard-p": "Empleni aquest formulari sobre el seu negoci per a acabar la configuració.",
     "wizard-plugins": "Un plugin és un complement que afegeix noves funcionalitats. Selecciona els plugins que vulguis activar immediatament, o fes-ho més tard des del panell de control.",
+    "work-events": "Eventos de trabajo",
     "working-hours": "Horari de treball",
     "write-a-message-here": "Escriu un missatge aquí",
     "x-column": "Columna X",
