--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -320,6 +320,7 @@
     "credit": "Crèdit",
     "crm": "CRM",
     "cron-job": "Tasca programada",
+    "crons": "Crons",
     "currency": "Moneda",
     "currency-position": "Posició del símbol de la moneda",
     "current-risk": "Risc actual",
@@ -453,6 +454,7 @@
     "documents-generated": "Documents generats",
     "domiciled": "Domiciliat",
     "done": "Fet",
+    "done-date": "Fecha finalización",
     "dont-sell-above-pvp": "No vendre per damunt del PVP",
     "dont-sell-below-cost": "No vendre per baix del cost",
     "download": "Descarregar",
@@ -539,6 +541,8 @@
     "estimation-email-subject": "estimation-email-subject",
     "estimation-email-text": "estimation-email-text",
     "estimations": "Presuposts",
+    "event": "Evento",
+    "events": "Eventos",
     "exceptions": "Excepcions",
     "excess": "excess",
     "exclude-invalid": "Excluir inválidos",
@@ -561,6 +565,7 @@
     "export": "Exportar",
     "export-bill": "Factura d'exportació",
     "extra-file": "Archiu extra",
+    "failed": "Fallido",
     "families": "Famílies",
     "family": "Familia",
     "family-code": "Còdic de la família",
@@ -1570,6 +1575,7 @@
     "wizard": "Assistent",
     "wizard-p": "Ompli este formulari sobre el teu negoci per a acabar la configuració",
     "wizard-plugins": "Un plugin és un complement que afig noves funcionalitats. Selecciona els plugins que vulgues activar immediatament, o fes-ho més tard des del panell de control.",
+    "work-events": "Eventos de trabajo",
     "working-hours": "Horario de trabajo",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Columna X",
